@@ -1,3 +1,14 @@
+2007-03-14  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/api_view.py: 
+	* plugins/event_monitor.py:
+	* src/lib/accerciser/accessible_treeview.py:
+	* src/lib/accerciser/tools.py: Made more resilient to dead 
+	corba objects.
+	* src/accerciser.glade:
+	* src/lib/accerciser/accerciser.py: Fixed accelerator issues 
+	(bug 412509).
+
 2007-03-13  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/interface_view.glade:
